--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ overlay-menu{
   </div>
 
   <!-- Products Grid -->
-  <section class="products" id="productGrid" id="itemList" >
+  <section class="products"  id="itemList" >
      
     <div class="card" 
     data-name="iPhone 14 Pro" data-specs="Processor: A16 Bionic; Storage: 128GB; Display: 6.1&quot;; Price: $999">
