--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@ overlay-menu{
       <h3>iPhone 14 Pro</h3>
       <ul>
         <p>Processor: A16 Bionic</p>
-        <p>Storage: 128GB</p>
+        <p>Storage: 128GB,256GB,512GB,1TTB</p>
         <p>Display: 6.1"</p>
-        <p>Price: $999</p>
+        <p>Price:Rs. 172,990</p>
       </ul>
       <button class="view-btn" onclick="openModal(this)">View Details</button>
     </div>
