--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ overlay-menu{
      
     <div class="card" 
     data-name="iPhone 14 Pro" data-specs="Processor: A16 Bionic; Storage: 128GB; Display: 6.1&quot;; Price: $999">
-      <img src="https://via.placeholder.com/250x150" alt="iPhone">
+      <img src="img/14pro.jpg" alt="iPhone">
       <h3>iPhone 14 Pro</h3>
       <ul>
         <p>Processor: A16 Bionic</p>
