Update index.html ttle

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
  
-  <title>Mobile Shop</title>
+  <title>MobileCart</title>
   <style>
     * {
       margin: 0;
@@ -292,7 +292,7 @@ overlay-menu{
 
   <!-- Header -->
   <header>
-    <h1>📱 Mobile Hub</h1>
+    <h1>📱 MobileCart</h1>
     <span class="menu-btn" onclick="toggleMenu()">☰</span>
   </header>
 
@@ -315,14 +315,14 @@ overlay-menu{
   <section class="products"  id="itemList" >
      
     <div class="card" 
-    data-name="iPhone 14 Pro" data-specs="Processor: A16 Bionic; Storage: 128GB; Display: 6.1&quot;; Price: $999">
+    data-name="iPhone 14 Pro" data-specs="Processor: A16 Bionic; Storage: 128GB,256GB,512GB,1TB; Display: 6.1&quot;; Price:RS 172,990, 191,990 ,228,990, 266,990">
       <img src="img/14pro.jpg" alt="iPhone">
       <h3>iPhone 14 Pro</h3>
       <ul>
         <p>Processor: A16 Bionic</p>
         <p>Storage: 128GB,256GB,512GB,1TTB</p>
         <p>Display: 6.1"</p>
-        <p>Price:Rs. 172,990</p>
+        <p>Price:Rs. 172,990, 191,990, 228,990, 266,990</p>
       </ul>
       <button class="view-btn" onclick="openModal(this)">View Details</button>
     </div>
