Update index.html imgs

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ overlay-menu{
     </div>
 
     <div class="card" data-name="Samsung Galaxy S23" data-specs="Processor: Snapdragon 8 Gen 2; Storage: 256GB; Display: 6.6&quot;; Price: $899">
-      <img src="https://via.placeholder.com/250x150" alt="Samsung">
+      <img src="img/s23.jpg" alt="Samsung">
       <h3>Samsung Galaxy S23</h3>
    
         <p>Processor: Snapdragon 8 Gen 2</p>
@@ -340,7 +340,7 @@ overlay-menu{
     </div>
 
     <div class="card" data-name="OnePlus 11" data-specs="Processor: Snapdragon 8 Gen 2; Storage: 128GB; Display: 6.7&quot;; Price: $799">
-      <img src="https://via.placeholder.com/250x150" alt="OnePlus">
+      <img src="img/1+.jpg" alt="OnePlus">
       <h3>OnePlus 11</h3>
       
         <p>Processor: Snapdragon 8 Gen 2</p>
