--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ overlay-menu{
      
     <div class="card" 
     data-name="iPhone 14 Pro" data-specs="Processor: A16 Bionic; Storage: 128GB,256GB,512GB,1TB; Display: 6.1&quot;; Price:RS 172,990, 191,990 ,228,990, 266,990">
-      <img src="img/14pro.jpg" alt="iPhone">
+      <img src="img/i14pro.jpg" alt="iPhone">
       <h3>iPhone 14 Pro</h3>
       <ul>
         <p>Processor: A16 Bionic</p>
